library/general/windows-container-resources/samples/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-containers-resources-allowed
spec:
  containers:
  - name: ping-loop-limits
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
    resources:
      limits:
        cpu: .25
        memory: 250m
  - name: ping-loop-limits-and-requests
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
    resources:
      limits:
        cpu: .25
        memory: 250m
      requests:
        cpu: .25
        memory: 250m
  nodeSelector:
    "kubernetes.io/os": windows
