library/general/windows-container-resources/samples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sWindowsContainerResources
metadata:
  name: windows-containers-must-set-resource-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
